--- a/.github/workflows/deno_test.yml
+++ b/.github/workflows/deno_test.yml
@@ -20,11 +20,9 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: denolib/setup-deno@v1.3.0
-    
-    - name: Install deno
-      run: curl -fsSL https://deno.land/x/install/install.sh | sh
-      
-    # Runs a single command using the runners shell
-    - name: Run test
-      run: deno test
+    - uses: actions/checkout@master
+    - uses: denolib/setup-deno@master
+      with:
+        deno-version: 0.x
+    - run: deno test
+
