--- a/.github/workflows/deno_test.yml
+++ b/.github/workflows/deno_test.yml
@@ -2,9 +2,9 @@ name: Deno Test
 
 on:
   push:
-    branches: [ master ]
+    branches: [ 0.x ]
   pull_request:
-    branches: [ master ]
+    branches: [ 0.x ]
 
 jobs:
   build:
