--- a/.github/workflows/deno_test.yml
+++ b/.github/workflows/deno_test.yml
@@ -2,9 +2,11 @@ name: Deno Test
 
 on:
   push:
-    branches: [ 0.x ]
+    tags: [ "0.8" ]
+    branches: [ "0.x" ]
   pull_request:
-    branches: [ 0.x ]
+    tags: [ "0.8" ]
+    branches: [ "0.x" ]
 
 jobs:
   build:
