--- a/.github/workflows/deno_test.yml
+++ b/.github/workflows/deno_test.yml
@@ -16,6 +16,6 @@ jobs:
       - uses: actions/checkout@master
       - uses: denolib/setup-deno@master
         with:
-          deno-version: 0.41.0
+          deno-version: 1.0.0-rc1
       - run: deno test
 
